# Part of the OZI Project, under the Apache License v2.0 with LLVM Exceptions.
# See LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
children = [
    'Academic Free License (AFL)',
    'Apache Software License',
    'Artistic License',
    'Boost Software License 1.0 (BSL-1.0)',
    'BSD License',
    'CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)',
    'Eclipse Public License 1.0 (EPL-1.0)',
    'Eclipse Public License 2.0 (EPL-2.0)',
    'European Union Public Licence 1.1 (EUPL 1.1)',
    'European Union Public Licence 1.2 (EUPL 1.2)',
    'GNU Affero General Public License v3',
    'GNU Affero General Public License v3 or later (AGPLv3+)',
    'GNU Free Documentation License (FDL)',
    'GNU General Public License (GPL)',
    'GNU General Public License v2 (GPLv2)',
    'GNU General Public License v2 or later (GPLv2+)',
    'GNU General Public License v3 (GPLv3)',
    'GNU General Public License v3 or later (GPLv3+)',
    'GNU Lesser General Public License v2 or later (LGPLv2+)',
    'GNU Lesser General Public License v3 (LGPLv3)',
    'GNU Lesser General Public License v3 or later (LGPLv3+)',
    'ISC License (ISCL)',
    'MIT License',
    'MIT No Attribution License (MIT-0)',
    'Mozilla Public License 2.0 (MPL 2.0)',
    'Mulan Permissive Software License v2 (MulanPSL-2.0)',
    'Open Software License 3.0 (OSL-3.0)',
    'PostgreSQL License',
    'SIL Open Font License 1.1 (OFL-1.1)',
    'zlib/libpng License',
]
foreach child: children
    subdir(child.underscorify())
endforeach
if false
    executable('templates_license_osi_children', children)
endif
