# Part of the OZI Project, under the Apache License v2.0 with LLVM Exceptions.
# See LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
children = [
    'Academic_Free_License__AFL_',
    'Apache_Software_License',
    'Apple_Public_Source_License',
    'Artistic_License',
    'Boost_Software_License_1_0__BSL_1_0_',
    'BSD_License',
    'CEA_CNRS_Inria_Logiciel_Libre_License__version_2_1__CeCILL_2_1_',
    'Eclipse_Public_License_1_0__EPL_1_0_',
    'Eclipse_Public_License_2_0__EPL_2_0_',
    'European_Union_Public_Licence_1_1__EUPL_1_1_',
    'European_Union_Public_Licence_1_2__EUPL_1_2_',
    'GNU_Affero_General_Public_License_v3',
    'GNU_Affero_General_Public_License_v3_or_later__AGPLv3__',
    'GNU_Free_Documentation_License__FDL_',
    'GNU_General_Public_License__GPL_',
    'GNU_General_Public_License_v2__GPLv2_',
    'GNU_General_Public_License_v2_or_later__GPLv2__',
    'GNU_General_Public_License_v3__GPLv3_',
    'GNU_General_Public_License_v3_or_later__GPLv3__',
    'GNU_Lesser_General_Public_License_v2__LGPLv2_',
    'GNU_Lesser_General_Public_License_v2_or_later__LGPLv2__',
    'GNU_Lesser_General_Public_License_v3__LGPLv3_',
    'GNU_Lesser_General_Public_License_v3_or_later__LGPLv3__',
    'ISC_License__ISCL_',
    'MIT_License',
    'MIT_No_Attribution_License__MIT_0_',
    'Mozilla_Public_License_2_0__MPL_2_0_',
    'Mulan_Permissive_Software_License_v2__MulanPSL_2_0_',
    'Open_Software_License_3_0__OSL_3_0_',
    'PostgreSQL_License',
    'SIL_Open_Font_License_1_1__OFL_1_1_',
    'zlib_libpng_License',
]
foreach child: children
    subdir(child)
endforeach
if false
    executable('templates_license_osi_children', children)
endif
